# unicirc

./: .gitignore  README.md  example_script.py  pyproject.toml
manuscript/AppE_fig_11/: PPR_SUN_ansatz.ipynb  PPR_SUN_ansatz.py  PPR_SUN_ansatz_heuristic_ordering.py
manuscript/AppE_fig_9/: PPR_SUN_ansatz.py  PPR_SUN_ansatz_heuristic_ordering.py
manuscript/II/: rank_tests.ipynb
manuscript/IVA_figs_2_10/: gen_fig_2_10.py
manuscript/IVA_figs_2_12/: gen_data.py  gen_fig_2_10.py  gen_fig_2_12.py
manuscript/IVB_figs_3_4/: Untitled.ipynb  config.json  gen_data.py  gen_fig_3.py  gen_fig_4.py
manuscript/IVB_figs_3_4_9_10/: gen_data.py  gen_fig_3.py
manuscript/IVB_figs_5_6/: config.json  gen_data.py  gen_fig_5.py  gen_fig_6.py
manuscript/IVC2_fig_7/: FDHS_Ising-n3.ipynb  Fig-7.ipynb
manuscript/IVC_table_II/: vibronic_ham_adapt.ipynb  vibronic_ham_adapt.py
manuscript/secII/: rank_tests.ipynb
manuscript/secIII/: find_universal_circuits.ipynb
manuscript/secIVA_figs_2_10/: gen_fig_2_10.py
manuscript/secIVB_figs_3_4/: gen_data.py  gen_fig_3.py  gen_fig_4.py
scripts/: IVA_expressibility_gen_data.py  IVA_expressibility_plot.py  IVB_chained_compilation_gen_data.py  IVB_chained_compilation_plot_cost.py  IVB_chained_compilation_plot_times.py  IVB_indep_compilation_gen_data.py  IVB_indep_compilation_plot_cost.py  IVB_indep_compilation_plot_success_rates.py
tests/: test_matrix.py  test_universal_ansatze.py  test_universality_test.py
unicirc/: __init__.py  count_clifford.py  matrix.py  optimization.py  universal_ansatze.py  universality_test.py
(+127 files in other folders)
